fixed flex-wrap on menu-navigation

--- a/src/sass/components/_menu-navigation.scss
+++ b/src/sass/components/_menu-navigation.scss
@@ -6,6 +6,7 @@
 
   ul {
     place-content: center;
+    flex-wrap: wrap;
   }
 
   span {
